[create a ] nav section

--- a/style.css
+++ b/style.css
@@ -4,15 +4,19 @@
   box-sizing: border-box;
 }
 
+/* Header section */
 nav {
+  margin: auto;
   display: flex;
   justify-content: center;
   justify-content: space-between;
+  align-items: center;
   width: Fill (1, 200px) px;
   height: Hug (68px) px;
   max-width: 1200px;
   gap: 0px;
   opacity: 0px;
+  padding-top: 16px;
 }
 nav > div > img {
   width: 89.55px;
@@ -27,4 +31,56 @@ nav > div > ul {
 nav li {
   list-style: none;
   margin-right: 2.2rem;
+  font-size: 18px;
+  font-family: Poppins;
+  font-weight: 400;
+  line-height: 28.8px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
 }
+
+#right-nav {
+  width: Hug (277px) px;
+  height: Hug (45px) px;
+  gap: 12px;
+  opacity: 0px;
+}
+
+#login-button {
+  width: Hug (104px);
+  height: Hug (45px);
+  padding: 8px 27px 8px 27px;
+  border-radius: 24px 24px 24px 24px;
+  opacity: 0px;
+  border: 1px solid #d0d5dd;
+  background: inherit;
+  color: #000000;
+  font-family: Nunito;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 28.8px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+}
+
+#book-demo-button {
+  color: #a657e7;
+  border: 1px solid #a657e7;
+  background-color: inherit;
+  width: Hug (161px) px;
+  height: Hug (45px) px;
+  padding: 8px 27px 8px 27px;
+  border-radius: 24px 24px 24px 24px;
+  opacity: 0px;
+  font-family: Nunito;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 28.8px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+}
+
+/* ------------------- Banner Section --------------- */
