--- a/style.css
+++ b/style.css
@@ -4,9 +4,21 @@
   box-sizing: border-box;
 }
 
+/* ----------- Reusable---------- */
+.primary-button {
+  width: Hug (156px) px;
+  height: Hug (45px) px;
+  padding: 8px 27px 8px 27px;
+  gap: 10px;
+  border-radius: 24px 24px 24px 24px;
+  opacity: 0px;
+  color: #ffffff;
+  border: none;
+  background: linear-gradient(177.38deg, #b564f7 8.45%, #6a2f9b 98.78%);
+}
+
 /* Header section */
 nav {
-  margin: auto;
   display: flex;
   justify-content: center;
   justify-content: space-between;
@@ -14,6 +26,7 @@ nav {
   width: Fill (1, 200px) px;
   height: Hug (68px) px;
   max-width: 1200px;
+  margin: auto;
   gap: 0px;
   opacity: 0px;
   padding-top: 16px;
@@ -65,7 +78,7 @@ nav li {
   text-decoration-skip-ink: none;
 }
 
-#book-demo-button {
+.book-demo-button {
   color: #a657e7;
   border: 1px solid #a657e7;
   background-color: inherit;
@@ -84,3 +97,78 @@ nav li {
 }
 
 /* ------------------- Banner Section --------------- */
+#banner-section {
+  background-color: #f5f5f5;
+}
+#banner-content {
+  max-width: 1200px;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 80px;
+  padding-bottom: 80px;
+}
+.banner-icon-container {
+  display: flex;
+  align-items: center;
+  width: Hug (283px) px;
+  height: Hug (40px) px;
+  padding: 8px 16px 8px 16px;
+  gap: 12px;
+  border-radius: 16px 0px 0px 0px;
+  opacity: 0px;
+}
+.banner-star-icon {
+  width: 17.11px;
+  height: 16.36px;
+  top: 3.57px;
+  left: 3.44px;
+  gap: 0px;
+  opacity: 0px;
+  background: #344054;
+}
+.banner-title {
+  font-family: Poppins;
+  font-size: 48px;
+  font-weight: 600;
+  line-height: 65px;
+  letter-spacing: -0.02em;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+}
+.banner-title-gradient {
+  background: linear-gradient(
+    90deg,
+    #2b034d 26.84%,
+    #b564f7 57.46%,
+    #d37ef0 86.78%,
+    #ef91ff 100%
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.price {
+  color: #d32e23;
+}
+.banner-paragraph {
+  color: #344054;
+  font-family: Inter;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 32px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+}
+.banner-book-button {
+  color: #a657e7;
+  border: 1px solid #a657e7;
+  width: Hug (173px) px;
+  height: Hug (45px) px;
+  padding: 8px 27px 8px 27px;
+  gap: 10px;
+  border-radius: 24px 24px 24px 24px;
+  opacity: 0px;
+}
