--- a/style.css
+++ b/style.css
@@ -100,43 +100,81 @@ nav li {
 #banner-section {
   background-color: #f5f5f5;
 }
+#banner-text-container {
+  width: 560px;
+  height: 271px;
+  gap: 12px;
+  opacity: 0px;
+  margin-top: 10px;
+}
 #banner-content {
   max-width: 1200px;
   margin: auto;
   display: flex;
   justify-content: center;
-  align-items: center;
   padding-top: 80px;
   padding-bottom: 80px;
+  gap: 10px;
 }
 .banner-icon-container {
+  background: #ffffff;
   display: flex;
   align-items: center;
-  width: Hug (283px) px;
-  height: Hug (40px) px;
+  width: 283px;
+  height: 40px;
   padding: 8px 16px 8px 16px;
   gap: 12px;
-  border-radius: 16px 0px 0px 0px;
+  border-radius: 16px 16px 16px 16px;
   opacity: 0px;
 }
 .banner-star-icon {
+  width: 24px;
+  height: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+#star {
   width: 17.11px;
   height: 16.36px;
-  top: 3.57px;
-  left: 3.44px;
-  gap: 0px;
-  opacity: 0px;
-  background: #344054;
+  background-color: #344054;
+  clip-path: polygon(
+    50% 0%,
+    61% 35%,
+    98% 35%,
+    68% 57%,
+    79% 91%,
+    50% 70%,
+    21% 91%,
+    32% 57%,
+    2% 35%,
+    39% 35%
+  );
 }
 .banner-title {
   font-family: Poppins;
   font-size: 48px;
   font-weight: 600;
-  line-height: 65px;
+  line-height: 60px;
   letter-spacing: -0.02em;
   text-align: left;
   text-underline-position: from-font;
   text-decoration-skip-ink: none;
+  margin-bottom: 8px;
+}
+#star-title {
+  width: 215px;
+  height: 24px;
+  gap: 0px;
+  opacity: 0px;
+  font-family: Poppins;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: center;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  color: #344054;
 }
 .banner-title-gradient {
   background: linear-gradient(
@@ -161,6 +199,7 @@ nav li {
   text-align: left;
   text-underline-position: from-font;
   text-decoration-skip-ink: none;
+  margin-bottom: 10px;
 }
 #banner-buttons {
   width: Hug (353px) px;
@@ -217,7 +256,7 @@ nav li {
 #social-icn-title {
   width: 448px;
   height: 30px;
-  gap: 0px;
+  margin-bottom: 8px;
   opacity: 0px;
   font-family: Poppins;
   font-size: 20px;
@@ -246,4 +285,82 @@ nav li {
   gap: 32px;
   border-radius: 16px 16px 16px 16px;
   opacity: 0px;
+}
+
+/* ------------------------------------------------------------ */
+/* ---------------------- Our Clients Features Styles ---------------------- */
+/* ------------------------------------------------------------ */
+
+#our-clients-features {
+  height: 226px;
+  flex-shrink: 0;
+}
+#our-clients {
+  display: inline-flex;
+  align-items: center;
+  gap: 72px;
+  padding: 48px 123px 48px 123px;
+}
+
+#client-quantity {
+  align-self: stretch;
+  color: #000;
+  font-family: Poppins;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
+#client-title {
+  align-self: stretch;
+  color: var(--Gray-800, #1d2939);
+  font-family: Poppins;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+#divider {
+  width: 1px;
+  height: 130px;
+  background: linear-gradient(
+    90deg,
+    rgba(0, 0, 0, 0) 0%,
+    #000 49.44%,
+    rgba(102, 102, 102, 0) 100%
+  );
+}
+#client-company-logos {
+  display: flex;
+  width: 100;
+  justify-content: space-between;
+  align-items: center;
+  overflow: hidden;
+  position: relative;
+  white-space: nowrap;
+  align-items: center;
+}
+.company-logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 11.38px;
+  flex-shrink: 0;
+}
+.logo-marquee {
+  display: flex;
+  gap: 40px;
+  animation: scroll 15s linear infinite;
+}
+#client-company-logos:hover .logo-marquee {
+  animation-play-state: paused;
+}
+/* Keyframes for marquee animation */
+@keyframes scroll {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
 }
