--- a/style.css
+++ b/style.css
@@ -4,7 +4,11 @@
   box-sizing: border-box;
 }
 
-/* ----------- Reusable---------- */
+body {
+  background: #f5f5f5;
+}
+
+/* ----------- Reusable Start---------- */
 .primary-button {
   width: Hug (156px) px;
   height: Hug (45px) px;
@@ -16,8 +20,48 @@
   border: none;
   background: linear-gradient(177.38deg, #b564f7 8.45%, #6a2f9b 98.78%);
 }
+.section-parent {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 16px;
+}
+.section-title {
+  color: var(--Base-Black, #000);
+  text-align: center;
+  font-family: Poppins;
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 124%; /* 59.52px */
+  letter-spacing: -0.48px;
+}
+.section-color {
+  color: #a554e6;
+  font-family: Poppins;
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 124%;
+  letter-spacing: -0.48px;
+}
+.section-des {
+  width: 741px;
+  margin: auto;
+  color: var(--Gray-700, #344054);
+  text-align: center;
+  font-family: Inter;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 160%; /* 25.6px */
+}
+/* ----------- Reusable End---------- */
 
 /* Header section */
+header {
+  background: #fff;
+}
 nav {
   display: flex;
   justify-content: center;
@@ -292,18 +336,30 @@ nav li {
 /* ------------------------------------------------------------ */
 
 #our-clients-features {
+  background: #fff;
   height: 226px;
   flex-shrink: 0;
+  border: 2px solid skyblue;
+  padding: 48px 123px;
+  margin-bottom: 100px;
 }
+
 #our-clients {
   display: inline-flex;
   align-items: center;
+  justify-content: center;
   gap: 72px;
-  padding: 48px 123px 48px 123px;
+}
+
+#client-text {
+  align-self: stretch;
+  display: flex;
+  width: 260px;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
 #client-quantity {
-  align-self: stretch;
   color: #000;
   font-family: Poppins;
   font-size: 32px;
@@ -311,8 +367,8 @@ nav li {
   font-weight: 600;
   line-height: normal;
 }
+
 #client-title {
-  align-self: stretch;
   color: var(--Gray-800, #1d2939);
   font-family: Poppins;
   font-size: 20px;
@@ -320,6 +376,7 @@ nav li {
   font-weight: 400;
   line-height: normal;
 }
+
 #divider {
   width: 1px;
   height: 130px;
@@ -330,37 +387,158 @@ nav li {
     rgba(102, 102, 102, 0) 100%
   );
 }
-#client-company-logos {
+
+#logo-container {
   display: flex;
-  width: 100;
   justify-content: space-between;
   align-items: center;
-  overflow: hidden;
-  position: relative;
-  white-space: nowrap;
-  align-items: center;
 }
+
 .company-logo {
   display: flex;
+  width: 170px;
+  height: 48px;
+  padding: 2px 0.738px 2px 0px;
   justify-content: center;
   align-items: center;
   gap: 11.38px;
   flex-shrink: 0;
 }
-.logo-marquee {
+
+/* ---------All-Inclusive Creative Services Styles-------------- */
+#creative-services {
+  max-width: 1200px;
+  margin: auto;
+}
+
+#services-container {
+  margin-top: 48px;
   display: flex;
-  gap: 40px;
-  animation: scroll 15s linear infinite;
+  padding: 28px 24px;
+  flex-direction: column;
+  align-items: center;
+  gap: 48px;
+  border-radius: 16px;
+  border: 1px solid var(--Gray-300, #d0d5dd);
+  background: #fff;
 }
-#client-company-logos:hover .logo-marquee {
-  animation-play-state: paused;
+
+#services-contents-box {
+  display: flex;
+  align-items: center;
+  gap: 48px;
+  align-self: stretch;
 }
-/* Keyframes for marquee animation */
-@keyframes scroll {
-  0% {
-    transform: translateX(0);
-  }
-  100% {
-    transform: translateX(-100%);
-  }
+#left-side-content {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 32px;
+}
+#what-we-provide {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+#left-side-content h4 {
+  color: var(--Base-Black, #000);
+  text-align: center;
+  font-family: Poppins;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 124%;
+  letter-spacing: -0.24px;
+}
+.creative-services {
+  display: flex;
+  /* align-items: center; */
+  gap: 20px;
+}
+
+.creative-services-info {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 24px;
+}
+
+.service-icon img {
+  width: 20px;
+  height: 20px;
+  flex-shrink: 0;
+  margin-top: 6px;
+}
+
+.creative-services-content h2 {
+  color: var(--Gray-900, #101828);
+  font-family: Poppins;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+
+.creative-services-content p {
+  width: 466px;
+  color: var(--Gray-700, #344054);
+  font-family: Poppins;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+#service-divider {
+  width: 1px;
+  height: 336px;
+  background: linear-gradient(
+    90deg,
+    rgba(0, 0, 0, 0) 0%,
+    #000 49.44%,
+    rgba(102, 102, 102, 0) 100%
+  );
+}
+
+#right-side-content {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 16px;
+}
+.left-content-box {
+  display: flex;
+  padding: 24px;
+  align-items: center;
+  gap: 113px;
+  border-radius: 16px;
+  border: 1px solid var(--Gray-300, #d0d5dd);
+}
+
+.creative-info {
+  display: flex;
+  width: 380px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 12px;
+}
+.creative-info h5 {
+  align-self: stretch;
+  color: var(--Gray-800, #1d2939);
+  font-family: Poppins;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 44px; /* 244.444% */
+  letter-spacing: -0.36px;
+}
+.creative-info p {
+  align-self: stretch;
+  color: var(--Gray-700, #344054);
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 164%; /* 26.24px */
 }
