--- a/style.css
+++ b/style.css
@@ -10,16 +10,20 @@ body {
 
 /* ----------- Reusable Start---------- */
 .primary-button {
-  width: Hug (156px) px;
-  height: Hug (45px) px;
-  padding: 8px 27px 8px 27px;
+  /* display: flex; */
+  padding: 8px 27px;
+  justify-content: center;
+  align-items: center;
   gap: 10px;
-  border-radius: 24px 24px 24px 24px;
-  opacity: 0px;
-  color: #ffffff;
+  border-radius: 24px;
+  background-color: #a554e6;
+  color: var(--Base-White, #fff);
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 160%;
   border: none;
-  background: linear-gradient(177.38deg, #b564f7 8.45%, #6a2f9b 98.78%);
-  cursor: pointer;
 }
 .section-parent {
   display: flex;
@@ -859,4 +863,31 @@ nav li {
 
 .faq-item.active .faq-question::after {
   content: "-";
+}
+
+/* ------------ Footer Styles----------- */
+
+footer {
+  display: flex;
+  height: 526px;
+  padding: 46px 0px;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  flex-shrink: 0;
+  background: var(--Base-White, #fff);
+}
+#footer-container {
+  display: flex;
+  max-width: 1200px;
+  flex-direction: column;
+  align-items: center;
+  gap: 40px;
+  align-self: stretch;
+}
+#main-columns-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  align-self: stretch;
 }
