[create responsive] for mobile and pc device

--- a/style.css
+++ b/style.css
@@ -421,8 +421,8 @@ nav li {
 #services-container {
   margin-top: 48px;
   display: flex;
-  padding: 28px 24px;
   flex-direction: column;
+  padding: 28px 24px;
   align-items: center;
   gap: 48px;
   border-radius: 16px;
@@ -658,7 +658,7 @@ nav li {
 #business-videos-container {
   padding-top: 80px;
   display: flex;
-  width: 1221px;
+  max-width: 1221px;
   margin: auto;
   flex-direction: column;
   align-items: flex-start;
@@ -713,7 +713,7 @@ nav li {
 #branding-videos-container {
   padding-top: 100px;
   display: flex;
-  width: 1221px;
+  max-width: 1221px;
   margin: auto;
   flex-direction: column;
   align-items: flex-start;
@@ -798,7 +798,7 @@ nav li {
   gap: 48px;
 }
 #client-stories-header {
-  width: 795px;
+  max-width: 795px;
   height: 120px;
   margin: auto;
 }
@@ -890,11 +890,11 @@ nav li {
   line-height: 24px; /* 150% */
 }
 .review-details-box {
-  width: 512px;
+  max-width: 512px;
   height: 139px;
 }
 .review-details-box p {
-  width: 507px;
+  max-width: 507px;
   color: var(--Gray-700, #344054);
   font-family: Poppins;
   font-size: 16px;
@@ -988,7 +988,7 @@ nav li {
 /* --------- FAQ Section ---------- */
 /* --------------------------------------------- */
 .faq-subtext {
-  width: 1066px;
+  max-width: 1066px;
   color: var(--Gray-800, #1d2939);
   text-align: center;
   font-family: Poppins;
@@ -1206,17 +1206,7 @@ footer {
   gap: 24px;
 }
 
-#email-input {
-  display: flex;
-  padding: 8px 183px 8px 10px;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-  align-self: stretch;
-  border-radius: 8px;
-  border: 1px solid var(--Gray-300, #d0d5dd);
-}
-#phone-number {
+.input-box {
   display: flex;
   padding: 8px 183px 8px 10px;
   justify-content: center;
@@ -1277,4 +1267,383 @@ footer {
   font-style: normal;
   font-weight: 400;
   line-height: 150%; /* 21px */
+}
+
+/* =================================================================== Responsive Sections======================================== */
+
+/* Reusable Sections */
+.section-title {
+  color: var(--Base-Black, #000);
+  text-align: center;
+  font-family: Poppins;
+  font-size: 28px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 124%;
+  letter-spacing: -0.48px;
+}
+.section-color {
+  color: #a554e6;
+  font-family: Poppins;
+  font-size: 28px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 124%;
+  letter-spacing: -0.48px;
+}
+.section-des {
+  width: 400px;
+  margin: auto;
+  color: var(--Gray-700, #344054);
+  text-align: center;
+  font-family: Inter;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 160%; /* 25.6px */
+}
+
+/* Responsive Adjustments */
+@media (max-width: 768px) {
+  @media (max-width: 480px) {
+    nav {
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      justify-content: center;
+      width: 400px;
+      height: 280px;
+    }
+    nav > div > ul {
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      justify-content: center;
+    }
+
+    #banner-text-container {
+      width: 380px;
+      height: 320px;
+      margin: auto;
+      gap: 12px;
+      margin-top: 10px;
+    }
+    #banner-content {
+      display: grid;
+      width: 100%;
+      height: 100%;
+      padding: 40px 40px;
+    }
+    .banner-title {
+      font-family: Poppins;
+      font-size: 40px;
+      font-weight: 600;
+      line-height: 50px;
+      letter-spacing: -0.02em;
+      text-align: left;
+      text-underline-position: from-font;
+      text-decoration-skip-ink: none;
+      margin-bottom: 8px;
+    }
+    #banner-images {
+      display: grid;
+      align-items: center;
+      justify-content: center;
+      width: 100%;
+      height: fit-content;
+    }
+    #banner-texts {
+      width: 400px;
+      height: 450px;
+      margin: auto;
+      top: 180px;
+      left: 120px;
+      gap: 12px;
+      opacity: 0px;
+    }
+    #social-icn-container {
+      display: grid;
+      align-items: start;
+      justify-content: start;
+      margin-top: 20px;
+    }
+    #social-icons-container {
+      background: #ffffff;
+      width: 400px;
+      height: 130px;
+      padding: 20px 24px;
+      border-radius: 16px 16px 16px 16px;
+      opacity: 0px;
+    }
+    .social-icon {
+      width: 30px;
+      height: 30px;
+      opacity: 0px;
+    }
+    #social-icons {
+      width: 448px;
+      height: 48px;
+      display: flex;
+      justify-content: flex-start;
+      gap: 12px;
+    }
+    #our-clients-features {
+      background: #fff;
+      height: fit-content;
+      flex-shrink: 0;
+      border: none;
+      padding: 48px 123px;
+      margin-bottom: 100px;
+    }
+    #our-clients {
+      display: grid;
+      align-items: center;
+      justify-content: center;
+      gap: 72px;
+    }
+    #divider {
+      display: none;
+    }
+    #logo-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      align-items: center;
+      gap: 44px;
+    }
+
+    #services-contents-box {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 10px;
+      align-self: stretch;
+    }
+    #creative-services {
+      max-width: 400px;
+      margin: auto;
+    }
+
+    .creative-services-content p {
+      width: 320px;
+      color: var(--Gray-700, #344054);
+      font-family: Poppins;
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: normal;
+    }
+    #service-divider {
+      display: none;
+    }
+    .creative-info {
+      display: flex;
+      width: 200px;
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 12px;
+    }
+
+    #video-highlight {
+      padding-top: 80px;
+      display: flex;
+      width: 400px;
+      margin: auto;
+      flex-direction: column;
+      align-items: center;
+      gap: 48px;
+    }
+    #highlight-videos {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 24px;
+      align-self: stretch;
+    }
+    .trending-categories {
+      display: grid;
+      grid-template-columns: repeat(1, 1fr);
+      align-items: center;
+      justify-content: center;
+      gap: 31px;
+      align-self: stretch;
+    }
+
+    #business-videos-container {
+      padding-top: 80px;
+      display: flex;
+      max-width: 470px;
+      margin: auto;
+      flex-direction: column;
+      align-items: center;
+      gap: 40px;
+    }
+    .business-title {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 16px;
+      margin: auto;
+    }
+    .business-videos {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 24px;
+    }
+
+    #branding-videos-container {
+      padding-top: 100px;
+      display: flex;
+      max-width: 470px;
+      margin: auto;
+      flex-direction: column;
+      align-items: center;
+      gap: 40px;
+    }
+
+    #why-shorts-videos {
+      margin-top: 100px;
+      /* padding: 40px 120px; */
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 10px;
+      background: #fff;
+    }
+    #why-shorts-container {
+      display: flex;
+      flex-direction: column;
+    }
+    #why-shorts {
+      width: 400px;
+      height: 400px;
+    }
+    #why-shorts img {
+      width: 400px;
+    }
+    #why-shorts-content {
+      display: flex;
+      width: 390px;
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 22px;
+    }
+    #why-shorts-texts h3 {
+      align-self: stretch;
+      color: var(--Base-Black, #000);
+      font-family: Raleway;
+      font-size: 38px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: 124%;
+      letter-spacing: -0.48px;
+    }
+    #client-stories-header {
+      height: 180px;
+      margin: auto;
+    }
+    #partners-videos {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 40px;
+      align-self: stretch;
+    }
+    .top-review-box {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 28px;
+      align-self: stretch;
+    }
+    .client-review {
+      display: flex;
+      padding: 14px 17px;
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 4px;
+      border-radius: 14px;
+      border: 1px solid rgba(0, 159, 226, 0.33);
+      background: #fff;
+    }
+    .review-header {
+      display: flex;
+      align-items: center;
+      gap: 40px;
+    }
+    #testimonial-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 16px;
+      align-self: stretch;
+    }
+
+    #faq-sections {
+      padding: 8px 20px;
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 0px;
+    }
+    .faq-container {
+      width: 400px;
+      margin: auto;
+      padding: 10px;
+      border-radius: 8px;
+    }
+
+    footer {
+      display: flex;
+      height: fit-content;
+      padding: 46px 0px;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      gap: 10px;
+      flex-shrink: 0;
+      background: var(--Base-White, #fff);
+    }
+    #main-columns-container {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      align-self: stretch;
+      gap: 50px;
+    }
+    #footer-container {
+      display: flex;
+      flex-direction: column;
+      width: 400px;
+      margin: auto;
+      flex-direction: column;
+      align-items: center;
+      gap: 40px;
+      align-self: stretch;
+    }
+    #form-container {
+      display: flex;
+      width: 400px;
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 24px;
+    }
+    .submit-button-container {
+      width: 400px;
+      margin: auto;
+      display: flex;
+      padding: 8px 90px;
+      justify-content: center;
+      align-items: center;
+      gap: 12px;
+      align-self: stretch;
+      border-radius: 12px;
+      background: #1d1d1d;
+    }
+
+    #footer-divider {
+      display: none;
+    }
+    /*  */
+  }
 }
